--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,3 +2,38 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.content {
+  padding: 50px 0;
+}
+
+.title {
+  margin-bottom: 50px;
+  font-size: 40px;
+}
+
+.loading {
+  display: block;
+  margin-top: 40px;
+  font-size: 18px;
+}
+
+.album {
+  margin: 0 auto;
+  width: 150px;
+}
+
+.photo {
+  margin: 40px auto;
+  width: 150px;
+  height: 150px;
+}
+
+.name {
+  display: block;
+  margin-top: -40px;
+  padding: 10px 0;
+  font-size: 18px;
+  border: 1px solid #efefef;
+  border-top: 0;
+}
