--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,6 +24,7 @@ body {
 }
 
 .photo {
+  cursor: pointer;
   margin: 40px auto;
   width: 150px;
   height: 150px;
@@ -36,4 +37,41 @@ body {
   font-size: 18px;
   border: 1px solid #efefef;
   border-top: 0;
+}
+
+.id {
+  display: block;
+  margin-top: -40px;
+  padding: 10px 0;
+  font-size: 18px;
+}
+
+.lightbox {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .8);
+}
+
+.box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  max-width: 350px;
+  background: #fff;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  line-height: 30px;
+}
+
+.desc {
+  margin: 30px 15px;
 }
